operator/config/default/manager_args_patch.yaml
# This patch adds tailing sidecar image as container args
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
spec:
  template:
    spec:
      containers:
      - name: manager
        args:
        - "--metrics-addr=127.0.0.1:8080"
        - "--enable-leader-election"
        - "--tailing-sidecar-image=sumologic/tailing-sidecar:latest"
