operator/config/default/manager_webhook_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator
  namespace: system
spec:
  template:
    spec:
      containers:
      - name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        startupProbe:
          httpGet:
            scheme: HTTPS
            path: /add-tailing-sidecars-v1-pod
            port: 9443
            httpHeaders:
            - name: Accept
              value: application/json
            - name: Content-Type
              value: application/json
          periodSeconds: 3
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /add-tailing-sidecars-v1-pod
            port: 9443
            httpHeaders:
            - name: Accept
              value: application/json
            - name: Content-Type
              value: application/json
          initialDelaySeconds: 1
          periodSeconds: 10
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
