operator/config/default/webhook_patch.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
  name: tailing-sidecar.sumologic.com
  reinvocationPolicy: IfNeeded
  ## enable the example below to limit to namespaces with specific labels only
  # namespaceSelector:
  #   matchLabels:
  #     tailing-sidecar: "true"
  ## enable the example below to limit to objects with specific labels only
  # objectSelector:
  #   matchLabels:
  #     tailing-sidecar: "true"
